--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
+[build]
+  base = "/"
+  publish = "dist"
+[context.production]
+  publish = "output/"
 [[redirects]]
   from = "/*"
   to = "/index.html"
